[package]
name = "grab-and-store-pic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["server"] }
log = "0.4.17"
url = "2.3.1"
serde_json = "1.0.91"
diesel = { version = "2.0.2", features = ["postgres"] }
serde = { version = "1.0.152", features = ["derive"] }
maud = { git = "https://github.com/lfairy/maud" }
